[project]
name = "light-hf-proxy"
version = "0.0.2"
authors = [
  { name="Yemin Shi", email="shiyemin2@gmail.com" },
]
description = "A light proxy solution for HuggingFace hub."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface_hub"
]

[project.urls]
"Homepage" = "https://github.com/shiyemin/light-hf-proxy"
"Bug Tracker" = "https://github.com/shiyemin/light-hf-proxy/issues"
